# atom

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PROJECT.md  alembic.ini  pyproject.toml  render.yaml
alembic/: env.py
archive/: IMPLEMENTATION_STATUS.md  Makefile  atom_dev.db  note.md  pyproject.toml
archive/.omc/: project-memory.json
archive/.omc/state/: agent-replay-8073eb82-fe3d-4a97-9d14-d15af58a8cec.jsonl  subagent-tracking.json
archive/.omc/state/checkpoints/: checkpoint-2026-03-05T15-41-58-197Z.json
archive/configs/: boxing.yaml
archive/data/keypoints/: front_cross_seg003.json  front_cross_seg003.npy  front_cross_seg005.json  front_cross_seg006.npy  front_cross_seg007.json  front_cross_seg007.npy  front_cross_seg008.npy  front_cross_seg009.json  front_cross_seg009.npy  front_cross_seg010.json  front_cross_seg010.npy  front_cross_seg011.json  front_cross_seg011.npy  front_cross_seg012.json  front_cross_seg012.npy  front_cross_seg014.json  front_cross_seg014.npy  front_cross_seg016.json  front_cross_seg016.npy  front_cross_seg018.npy  front_guard_seg000.json  front_guard_seg002.json  front_guard_seg003.json  front_guard_seg003.npy  front_guard_seg005.json  front_guard_seg005.npy  front_guard_seg007.json  front_guard_seg007.npy  front_guard_seg010.json  front_guard_seg011.json  front_guard_seg011.npy  front_guard_seg012.json  front_guard_seg012.npy  front_guard_seg015.json  front_guard_seg015.npy  front_jab_seg000.json  front_jab_seg000.npy  front_jab_seg001.json  front_jab_seg002.npy  front_jab_seg003.npy  (+545 more)
archive/mobile/: App.tsx  package-lock.json  package.json
archive/mobile/src/navigation/: types.ts
archive/mobile/src/screens/: DrillSessionScreen.tsx  HomeScreen.tsx  SessionSetupScreen.tsx  TwinScreen.tsx  UploadingScreen.tsx
archive/mobile/src/types/: index.ts
archive/phase1/atom.egg-info/: PKG-INFO  SOURCES.txt
archive/phase1/data/keypoints/: cross_001.json  cross_004.npy  cross_005.npy  cross_007.json  cross_008.json  cross_008.npy  cross_009.json  cross_009.npy  cross_010.json  cross_010.npy  cross_011.json  cross_011.npy  cross_012.json  cross_013.npy  cross_014.npy  cross_015.json  cross_018.json  cross_018.npy  cross_019.json  cross_019.npy  cross_020.npy  cross_022.npy  cross_023.json  cross_024.json  cross_024.npy  cross_026.json  cross_026.npy  cross_028.json  cross_028.npy  cross_029.json  cross_029.npy  cross_front_001.json  cross_front_002.json  cross_front_002.npy  cross_front_003.npy  cross_front_004.json  cross_front_004.npy  cross_front_005.json  cross_front_005.npy  cross_front_006.json  (+670 more)
archive/phase1/data/keypoints_fresh/: cross_001.npy  cross_002.json  cross_002.npy  cross_003.json  cross_003.npy  cross_004.json  cross_005.json  cross_006.json  cross_006.npy  cross_007.npy  cross_012.npy  cross_013.json  cross_014.json  cross_015.npy  cross_016.json  cross_016.npy  cross_017.json  cross_017.npy  cross_020.json  cross_021.json  cross_021.npy  cross_022.json  cross_023.npy  cross_025.json  cross_025.npy  cross_027.json  cross_027.npy  cross_front_001.npy  cross_front_003.json  cross_front_007.npy  cross_front_008.json  cross_front_008.npy  cross_front_009.json  cross_front_009.npy  cross_front_010.npy  cross_left_001.json  cross_left_001.npy  cross_left_002.json  cross_left_004.json  cross_left_005.json  (+447 more)
archive/phase1/data/splits/: test.txt  train.txt  val.txt
archive/phase1/mobile/: app.json
archive/phase1/mobile/.omc/: project-memory.json
archive/phase1/scripts/: classify_video.py  realtime_classify.py  realtime_classify_debug.py  realtime_drill.py  train_lstm.py
archive/phase1/server/: config.py  main.py
archive/phase1/server/routers/: scripts.py
archive/phase1/src/atom.egg-info/: SOURCES.txt  requires.txt  top_level.txt
archive/phase2/: ARCHIVE_MIGRATION.md  DATA_COLLECTION_PLAN.md  DATA_PIPELINE.md  DATA_STRUCTURE.md  PHASE1_COMPLETE.md  QUICK_START.md  README.md  add_guard_and_train.sh  debug_test.sh  pyproject.toml  quick_test.sh  record_test_jab_cross.sh  requirements.txt  split_all_v2.sh  test_examples.sh  test_model.sh
archive/phase2/server/services/: feedback_generator.py  llm_service.py  session_generator.py
archive/phase2/spec/: PRD.md  TECHSPEC.md  phase1-plan.md
archive/phase2/tests/: test_config.py
archive/phase2/tests/feeders/: test_boxing_feeder.py
archive/phase2/tests/model/: test_ctrgcn.py  test_graph.py
archive/phase2/tests/pipeline/: test_action_classifier.py  test_pipeline.py  test_pose_extractor.py  test_sequence_recognizer.py  test_session_matcher.py
archive/scripts/: annotate_video.py  demo_pose.py  extract_keypoints.py  realtime_classify.py
archive/server/models/: db.py  schemas.py
archive/server/routers/: sessions.py  users.py
archive/server/services/: analysis_pipeline.py  inference_service.py  report_generator.py  script_generator.py  verification_engine.py
archive/src/extraction/: pose_extractor.py
archive/src/inference/: utils.py
archive/src/preprocessing/: pipeline.py
(+795 files in other folders)
