[project]
name = "atom-track-b"
version = "0.1.0"
description = "Boxing action detection model for Atom Track B"
requires-python = ">= 3.12"
dependencies = [
    "opencv-python-headless>=4.10",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "yt-dlp>=2024.0",
    "mediapipe>=0.10.32",
    "ultralytics>=8.4.21",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/track_b"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
