[project]
name = "atom"
version = "0.1.0"
description = "Boxing motion digital twin - action recognition and drill analysis"
authors = [
    {name = "Atom Team"}
]
requires-python = ">=3.9,<3.10"
dependencies = [
    "numpy>=1.21.0,<2.0",
    "torch>=2.0.0",
    "pyyaml>=6.0",
    "pytest>=7.0.0",
    "mediapipe>=0.10.0",
    "opencv-python>=4.5.0",
    "aiohttp>=3.8.0",
    "xgboost>=2.1.4",
    "scikit-learn>=1.6.1",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
]
data-collection = [
    "scipy>=1.7.0",
    "pygame>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.rye
  | build
  | dist
)/
'''

[tool.hatch.build.targets.wheel]
packages = ["ml", "server"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
